# casparcg-server

src/CMakeModules/: Bootstrap_Windows.cmake
src/modules/: CMakeLists.txt
src/modules/ffmpeg/producer/: av_producer.h
src/modules/replay/: CMakeLists.txt  packages.config  replay.cpp  replay.h
src/modules/replay/consumer/: replay_consumer.cpp  replay_consumer.h
src/modules/replay/producer/: replay_producer.cpp  replay_producer.h
src/modules/replay/util/: file_operations.cpp  file_operations.h  frame_operations.cpp  frame_operations.h
